# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

module(
    name = "llvm-project-overlay",
    version = "19-init-bcr.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "zlib-ng", version = "2.0.7", repo_name="zlib")

llvm_project_overlay = use_extension(
    "//:extensions.bzl",
    "llvm_project_overlay",
)

llvm_project_overlay.configure(
    targets = [
        "AArch64",
        "AMDGPU",
        "ARM",
        "AVR",
        "BPF",
        "Hexagon",
        "Lanai",
        "Mips",
        "MSP430",
        "NVPTX",
        "PowerPC",
        "RISCV",
        "Sparc",
        "SystemZ",
        "VE",
        "WebAssembly",
        "X86",
        "XCore",
    ],
)

use_repo(
    llvm_project_overlay,
    "llvm-project",
    "llvm-raw",
)
